# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  test.yml
asciinema/: diff.cast  gendiff-json.cast  json.cast  plain.cast  yaml.cast
gendiff/: __init__.py  cli.py  comparison.py  generate_diff.py  generator.py  parser.py
gendiff/formatter/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test.py  test_all.py  test_gendiff.py  test_jaml.py  test_json.py
tests/fixtures/: file1.txt  file2.txt  json_2_1.txt  result_f1_f2_json.txt  result_f2_f1_json.txt  result_json.txt  result_json_f1_f2.txt
